# mcp-acp-nexus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  progress.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  architecture.md  auth.md  backend_auth.md  configuration.md  decision_context.md  installation.md  logging.md  policies.md  roadmap.md  security.md  ui.md  usage.md  web-ui.md
docs/design/: http-client-support.md  roadmap.md
docs/getting-started/: configuration.md  installation.md  usage.md  web-ui.md
docs/logging_specs/: generate_schemas.py
docs/reference/: api-reference.md  api_reference.md  architecture.md  decision-context.md  policies.md  request_flow_diagrams.md
docs/security/: auth.md  backend_auth.md  logging.md  security.md  zero-trust-compliance.md
scripts/: echo_server.py  measure_overhead.py  parse_latency_logs.py
src/mcp_acp/: __init__.py  config.py  constants.py  exceptions.py  proxy.py
tests/: test_approval_store.py  test_audit_logging.py  test_auth.py  test_config.py  test_context.py  test_hash_chain.py  test_integrity_state.py  test_pep.py  test_policy.py  test_policy_protocol.py  test_policy_reload.py  test_rate_limiter.py  test_sanitizer.py  test_session.py  test_specificity.py  test_stats.py  test_transport.py
tests/api/: __init__.py  test_config_routes.py  test_logs.py  test_pending.py  test_policy_routes.py  test_security.py  test_stats.py
tests/cli/: __init__.py  test_api_client.py  test_approvals.py  test_cli.py  test_logs.py  test_proxy_commands.py  test_sessions.py  test_status.py
tests/context/: __init__.py  test_context.py
tests/integration/: conftest.py  test_proxy_e2e.py
tests/manager/: __init__.py  test_client.py  test_deletion.py  test_disconnect.py  test_idle_shutdown.py  test_latency.py  test_protocol.py  test_proxy_config.py  test_registry.py  test_routes.py  test_stats.py  test_token_service.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
(+368 files in other folders)
