[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-acp"
version = "0.1.0"
description = "Zero Trust Access Control Proxy for Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Alandra", email = ""},
]
keywords = ["mcp", "proxy", "security", "zero-trust", "access-control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    # Auth dependencies (Zero Trust)
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    # API server
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "wsproto>=1.2.0",  # Modern websocket implementation for uvicorn (avoids websockets.legacy deprecation)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
mcp-acp = "mcp_acp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_acp"]

[tool.black]
line-length = 110
target-version = ["py311", "py312", "py313"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
